# Nmap Changelog ($Id$); -*-text-*-

o [Zenmap] A typo that led to a crash if the ndiff subprocess
  terminated with an error was fixed. [David] The message was
    File "zenmapGUI\DiffCompare.pyo", line 331, in check_ndiff_process
  UnboundLocalError: local variable 'error_test' referenced before assignment

o [Zenmap] A crash was fixed:
      File "zenmapGUI\SearchGUI.pyo", line 582, in operator_changed
    KeyError: "Syst\xc3\xa8me d'Exploitation"
  The text could be different, because the error was caused by
  translating a string that was also being used as an index into an
  internal data structure. The string will be untranslated until that
  part of the code can be rewritten. [David]

o Version detection now has a generic match line for SSLv3 servers,
  which matches more servers than the already-existing set of specific
  match lines. The match line found 13% more SSL servers in a test.
  Note that Nmap will not be able to do SSL scan-through against a
  small fraction of these servers, those that are SSLv3-only or
  TLSv1-only, because that ability is not yet built into Nsock. There
  is also a new version detection probe that works against SSLv2-only
  servers. These have shown themselves to be very rare, so that probe
  is not sent by default. Kristof Boeynaems provided the patch and did
  the testing.

o [Zenmap] A bug was fixed that caused a crash when doing a keyword:
  or target: search over hosts that had a MAC address. [David] The
  crash output was
      File "zenmapCore\SearchResult.pyo", line 86, in match_keyword
      File "zenmapCore\SearchResult.pyo", line 183, in match_target
    TypeError: argument of type 'NoneType' is not iterable

Nmap 4.85BETA5

o Ron (in just a few hours of furious coding) added remote detection
  of the Conficker worm to smb-check-vulns. It is based on new
  research by Tillmann Werner and Felix Leder.  You can scan your
  network for Conficker with a command like: nmap -PN -T4 -p139,445 -n